css/index.style.css
/* Depracated Version */
/* 
a, a:visited, a:hover, a:active{
    color:#999999;
    text-decoration: none;
}

@font-face{
    font-family: "Zector";
    src: url("../font/Zector.otf");
}

@media screen and (max-width:4000px){
    .sticky-container{
        width:1920px;
        font-size: 35px;
    }
    .nav-button{
        padding:15px;
    }
    .container1{
        width:100%;
    }
    .darkerline{
        margin-top: 175px;
        height: 500px;
    }
    .picture1{
        margin-left: 328px;
        margin-top: 100px;
        height: 625px;
        width: auto;
    }
    .name{
        height:100px;
        width: 600px;
        font-size: 35px;
        font-size: 120px;
        margin-left: 845px;
    }
    .career{
        height:50px;
        width: 500px;
        font-size: 40px;
        margin-left: 850px;
        margin-top:20px;
    }
    .description{
        height:250px;
        width: 800px;
        font-size: 20px;
        margin-left: 850px;
        margin-top:20px;
    }
}
@media screen and (max-width:1310px){
    .sticky-container{
        width:100%;
        font-size: 3vw;
    }
    .nav-button{
        padding-left: 2vw;
        padding-right:2vw;
    }
    .container1{
        width:100%;
    }
    .darkerline{
        margin-top: 90px;
        height:150vw;
    }
    .picture1{
        margin-left: 30%;
        margin-top:60px;
        height:50vw;
        width:auto;
    }
    .name{
        height:30px;
        width:50vw;
        font-size: 10vw;
        margin-left: 27.5%;
        margin-top: 46vw;
    }
    .career{
        width:60%;
        height:30px;
        font-size: 5vw;
        margin-left:25%;
        margin-top:5%;
    }
    .description{
        height:250px;
        width: 80%;
        font-size:3vw;
        margin-left:10%;
        margin-right:10%;
        margin-top:2vw;
    }
}

img{
    max-width: 100%;
    height:100%;
}

html{
    font-size: 100%;
}

body{
    background-color:#303030;
    margin: 0;
    height: 2500px;
    background-attachment:fixed;
}
header{
    color: #999999;
    background-color:#303030;
    height: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 60px;
    font-weight: lighter;
}

.sticky-container{
    color: #999999;
    background-color: #424242 ;
    font-family: "Zector", Verdana, Geneva, Tahoma, sans-serif;
    height: 75px;
    display: flex;
    align-items: center;
    position: sticky;
    width:100%;
    top: 0;
    left:0;
     background: rgba(66,66,66,.4); 
    z-index:0;
    background: linear-gradient(0,rgba(66,66,66,0), rgba(26,26,26,.6), rgba(26,26,26,1))

}

.nav-button{
    font-size: 100%;
}

#nav-button1{
   margin-right: auto;
   margin-left: 1%;
   color: #8080ff;

}

#nav-button5{
    margin-right: 1rem;
    color: #8080ff;
}

.container1{
    position:relative;
}

.picturecontainer{
    height:800px;
}

.picture1{
    position: absolute;
    z-index:-1;
    box-shadow: 5px 5px 30px;
}

.darkerline{
    position: absolute;
    background-color:#1a1a1a;
    width:100%;
    z-index:-2;
}

.name{
    display: absolute;
    color: #8080ff;
    font-family: "Zector", Verdana, Geneva, Tahoma, sans-serif;
}

.career{
    display: absolute;
    color: #999999;
    font-family: "Zector", Verdana, Geneva, Tahoma, sans-serif;
}

.description{
    display: absolute;
    color: #8d8d8d;
    font-family: "Zector", Verdana, Geneva, Tahoma, sans-serif;
} */

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,400;1,500;1,700&display=swap');

@font-face {
    font-family: 'Roboto';
    src: url('roboto.eot'); /* IE9 Compat Modes */
    src: url('roboto.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
    url('roboto.woff') format('woff'), /* Modern Browsers */
    url('roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
    url('roboto.svg#svgFontName') format('svg'); /* Legacy iOS */
}

:root{
    --border-rad-sm: 30px;
    --transition: .2s;
    --shadow-dark: #6e6e6e;
    --bg-light: #d1d1d1;
    --text-color-light: #d1d1d1;
    --color-hover:#ebebeb;
    --h2-sm: 20px;
}

/* Link text Override */
a, a:visited, a:hover, a:active{
    color:#FFFFFF;
    text-decoration: none;
}

/* Make Text Unselectable */
.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
  }

.dropShadow{
    filter: drop-shadow(4px 4px 2px rgb(53,53,53));
}

html, body {
    /* overflow: hidden; */
    font-family: 'Roboto', sans-serif;
    font-weight: 100;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

/* Base Container Class */
.Base-Container{
    /* 
    Row 1 - Landing Page
    Row 2 - Profile
    Row 3 - Projects
    */
    /* position: relative; */
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    grid-template-columns: 100%;
    grid-template-rows: repeat(autofill, .5fr);
    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
    /* background-color:deepskyblue; */
}

#LandingPage-Container{
    /* 
    Row 1 - NavBar
    Row 2 - Logo
    Row 3 - Arrow Container
    Row 1-3: Video Background
    */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
}

.LandingPage-NavBar-Container{
    position: absolute;
    margin-top: 20px;
    left: 0;
    right: 0;
    display: grid;
    grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    /* background-color: rgba(53, 53, 53, 0.521); */
    /* font-size: 30px; */
    z-index: 1;
    /* font-size: 3vh; */
}

#LandingPage-Logo{
    grid-row: 1 /span 3;
    grid-column: 1 / span 1;
    height: auto;
    width: 35%;
    place-self: center;
    z-index: 0;
}

.Video-Container{
    grid-row: 1 / span 3;
    grid-column: 1 / span 1;
    z-index: 0;
}

#Video{
    width: 100%    !important;
    height: auto    !important;
    filter: brightness(80%);
    margin-bottom: -200px;
    
}

.NavBarLink{
    margin: 3px;
    place-self: center;
    font-size: 3vh;
}

#HomeButton{
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    /* background-color: aquamarine; */
}

#AboutButton{
    grid-row: 1 / span 1;
    grid-column: 3 / span 1;
    /* background-color: blue; */
}

#BlogButton{
    grid-row: 1 / span 1;
    grid-column: 4 / span 1;
    /* background-color: brown; */
}

#ContactButton{
    grid-row: 1 / span 1;
    grid-column: 5 / span 1;
    /* background-color: chocolate; */
}

#Arrow-Container{
    display: grid;
    grid-template-rows: 1fr .1fr;
    grid-template-columns: 1fr;
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
    place-self: center;
    /* background-color: blueviolet; */
    font-size: 30px;
    z-index: 0;
}

#Arrow{
    color: #FFFFFF;
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
    place-self: center;
    font-size: 80px;
}

#ArrowText{
    color: #FFFFFF;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    margin-bottom: -10px;
    place-self: center;
    font-size: 4vh;
}

#Profile-Container-ID{
    display: grid;
    background-color: rgb(243, 243, 243);
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
    grid-template-columns: .7fr 1fr;
    grid-template-rows: 1fr;
    /* background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%), url(../images/background.PNG); */
    background-repeat: no-repeat;
    /* background-size: 100% 100%; */
    z-index: 0;
    grid-gap: 10px;
    /* padding-bottom: -10em; */
}

#JayPicture{
    /* background-color: darkgoldenrod; */
    width: 90%    !important;
    height: auto    !important;
    margin: 2vw;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    border-radius: 30px;
    justify-self: end;
    align-self: center;
}

#ProfileTitle{
    /* background-color: crimson; */
    justify-self: start;
    align-self: end;
    /* margin-top: 100px;
    margin-bottom: -30px; */
    font-size: 3vw;
}

#ProfileDescription-Container{
    /* background-color: aquamarine; */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, .25fr);
    grid-row: 1 / span 1;
    grid-column: 2 / span 1;
    align-self: center;
}

#ProfileDescription{
    /* background-color: aqua; */
    justify-self: start;
    align-self: start;
    font-size: 2.5vw;
    padding-right: 10vw;

}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 100,
  'GRAD' 0,
  'opsz' 48
}

#Projects-Title{
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
    /* position: absolute; */
    font-size: 100px;
    font-weight: 100;
    margin-bottom: -0.1em;
    background-color: #FFFFFF;
    z-index: 1;
}

.Projects-Cards-Container{
    /* padding-top: 4em; */
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-row: 4 / span 1;
    grid-column: 1 / span 1;
    /* padding: 10%; */
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 10%;
    column-gap: 5%;
    row-gap: 0.5%;
    /* background-color: #FFFFFF; */
    /* background-image: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(77,77,77,1) 99%); */
}
/* ============== CARD CSS ==============*/

#card1{
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
}

h1 {
    place-self: center;    
}

.Component{
    display: grid;
    place-items: center;
    margin-bottom: 1em;
}

.Card-Container{
    align-self: center;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    height: 100%;
    width: 80%;
    text-decoration: none;
    filter: var(--shadow-dark);
}

.Card-Image{
    align-self: end;
    object-fit: cover;
    height: 19em;
    width: 100%;
    border-radius: var(--border-rad-sm) var(--border-rad-sm) 0px 0px;
    grid-row: 1 / span 1;
}

.Card-Title {
    font-size: var(--h2-sm);
}
.Card-Container-Descriptor{
    display: grid;
    color: black;
    grid-template-columns: 1fr;
    grid-template-rows: .5fr 1fr .25fr;
    padding: 2em;
    height: 80%;
    border-radius: 0px 0px var(--border-rad-sm) var(--border-rad-sm);
    background-color: var(--bg-light);
    transition: var(--transition);
    grid-row: 2 / span 1;
}

.Card-Container:hover > .Card-Container-Descriptor {
    background-color: var(--color-hover);
    color: var(--text-color-light);
}

.Description-Author{
    align-self: end;
}
@media only screen and (max-width: 360px) {
    .Card-Container{
        margin-bottom: auto;
    }
}

@media only screen and (min-width: 450px) {
    .Card-Container{
        width: 90%;
        /* font-size: 15px; */
    }
}

@media only screen and (min-width: 1200px) {
    .Card-Container{
        width: 100%;
        /* font-size: 20px; */
    }
}
/* ============== CARD CSS ==============*/

#Footer{
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 5 / span 1;

    grid-template-columns: 1fr 1fr 2fr;
    grid-template-rows: 1fr;

    background-color: rgb(77, 77, 77);
    padding-bottom: -16em;
    overflow: hidden;
    padding-right: 1em;
}

#Footer-Logo{
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    height: auto;
    width: 65%;
    place-self: center;
}

#Footer-Links{
    /* background-color: cornflowerblue; */
    grid-column: 3 / span 1;
    grid-row: 1 / span 1;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: 1fr;
    display: grid;
}

